# renderer

./: .gitignore  CMakeLists.txt  README.md
include/: mesh.h  renderer.h
res/: neeko.mtl
src/: CMakeLists.txt  camera.cpp  camera.h  common.h  main.cpp  mesh.cpp  mesh.h  my_transform.cpp  my_transform.h  renderer.cpp  renderer.h  scene.cpp  scene.h  shader.cpp  shader.h  thread_pool.cpp  thread_pool.h  typedefs.h
src/shaders/: shader.cpp  shader.h
